# curd_axum

./: Cargo.toml  docker-compose.yml
migrations/: 20250926163613_create_users_table.sql
src/: handlers.rs  main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/schemas/: mod.rs  user_schemas.rs
